# FastAPI

./: README.md
FastAPI Gab/: banco.db  dependencies.py  main.py  models.py  schemas.py  user_routes.py
FastAPI Gab/alembic/versions/: a39a572fd8a5_initial_migration.py
fast_zero/: pyproject.toml
fast_zero/fast_zero/: app.py  schemas.py
fast_zero/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9a1c41c84ecadd61___init___py.html  z_9a1c41c84ecadd61_app_py.html  z_9a1c41c84ecadd61_schemas_py.html
fast_zero/tests/: test_app.py
