[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["'Gabriel <'gabrielirineupinheiro@gmail.com'>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"


[tool.pytest.init_options]
pythonpath = '.'
addopts = '-p no:warnings'


[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
